--- a/app/globals.css
+++ b/app/globals.css
@@ -84,7 +84,10 @@ body,
   border-left: 1px solid transparent;
 }
 .top-up-val + .top-up-val {
-  border-left-color: black;
+  @apply ml-1;
+}
+.top-up-val + .top-up-val::before {
+  content: "+ "
 }
 
 .cashed-out-card {
