--- a/app/globals.css
+++ b/app/globals.css
@@ -93,3 +93,9 @@ body,
 .cashed-out-card {
   background-color: lightgray;
 }
+
+@media screen and (max-width: 676px) {
+.transaction-modal .table-max-height {
+    max-height: 350px;
+  }
+}
